--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img src="images/kode.png" width="50" height="50" alt="">
+                                    <img src="images/kode.png" width="40" height="" alt="">
                                 </a>
                             </div>
                         </div>
@@ -50,24 +50,23 @@
                             <div class="main-menu  d-none d-lg-block text-center">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">home</a></li>
-                                        <li><a href="service.html">services</a></li>
-                                        <li><a href="portfolio.html">Portfolio</a></li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                        <li><a class="active" href="https://kodelang.dev">Trang chủ</a></li>
+                                        <li><a href="https://kodlang.dev/product">Sản phẩm</a></li>
+                                        <li><a href="https://kodelang.dev/docs">Tài liệu <i class="ti-angle-down"></i></a>
+                                            <ul class="submenu">
+                                                <li><a href="https://kodelang.dev/docs/categories/KodePas/">KodePas</a></li>
+                                                <li><a href="https://kodelang.dev/docs/categories/KodeLang/">Kode Lang</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="portfolio.html">Tài trợ</a></li>
+                                        <!--<li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="portfolio_details.html">Portfolio details</a></li>
                                                 <li><a href="about.html">about</a></li>
                                                 <li><a href="elements.html">elements</a></li>
                                             </ul>
-                                        </li>
-
-                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                            <ul class="submenu">
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="single-blog.html">single-blog</a></li>
-                                            </ul>
-                                        </li>
-                                        <li><a href="contact.html">Contact</a></li>
+                                        </li>-->
+                                        <li><a href="contact.html">Liên hệ</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -95,9 +94,9 @@
                     <div class="col-lg-10 col-md-10">
                         <div class="slider_text">
                             <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                                Viết mã tức là thay đổi thế giới
+                                Chúng ta là những lập trình viên
                             </h3>
-                            <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="portfolio.html">Visit Our Works</a>
+                            <a class="boxed-btn3 wow fadeInLeft"  data-wow-duration="1s" data-wow-delay=".2s" href="https://kodelang.dev/project">Xem các sản phẩm của chúng tôi</a>
                         </div>
                     </div>
                 </div>
@@ -112,10 +111,8 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="section_title text-center mb-70">
-                        <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s" >Services</span>
-                        <h3 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">With more than 20 years of 
-                            experience we can deliver the 
-                            best product design.</h3>
+                        <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s" >Dịch vụ</span>
+                        <h3 class="wow fadeInUp" data-wow-duration="1.2s" data-wow-delay=".2s">Các sản phẩm chúng tôi hướng tới các lập trình viên</h3>
                     </div>
                 </div>
             </div>
@@ -125,8 +122,8 @@
                         <div class="icon">
                             <img src="img/svg_icon/1.svg" alt="">
                         </div>
-                        <h3>Graphic design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
+                        <h3>Môi trường phát triển phần mềm</h3>
+                        <p>Giúp các lập trình viên có thể viết các phần mềm nhanh chóng, dễ dàng</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -134,8 +131,8 @@
                         <div class="icon">
                             <img src="img/svg_icon/2.svg" alt="">
                         </div>
-                        <h3>Web design</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
+                        <h3>Thiết kế</h3>
+                        <p>Phong cách thiết kế mới, đơn giản nhưng đẹp. Khai phá tối đa sức mạnh sáng tạo</p>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-4">
@@ -143,33 +140,35 @@
                         <div class="icon">
                             <img src="img/svg_icon/3.svg" alt="">
                         </div>
-                        <h3>Mobile app</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
+                        <h3>Cộng đồng lập trình viên</h3>
+                        <p>Kode sẽ kết nối các lập trình viên lại với nhau tạo thành một cộng đồng lớn</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!--/ service_area  -->
-
-    <div class="about_area">
+    <div class="how_we_work_area">
         <div class="container">
-            <div class="row justify-content-end">
-                <div class="col-lg-5 offset-lg-1">
-                    <div class="about_info">
-                        <div class="section_title white_text">
-                            <span class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">About Us</span>
-                            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Empowering individuals </h3>
-                            <p class="mid_text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Efficiently unleash cross-media tour function information without cross action media value. Quickly maximize timely deliverables for real-time schemas.</p>
-                            <p class="last_text wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">“Function information without cross action media value.</p>
-                            <a href="#" class="boxed-btn3 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".7s">About Us</a>
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="work_info">
+                        <div class="section_title">
+                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">Chúng tôi là những ai</h3>
+                            <p class="mid_text wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">“Function information without cross action media value.</p>
+                            <p class="last_p wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">Efficiently unleash cross-media tour function information without cross action media value. Quickly maximize timely deliverables for real-time schemas.</p>
+                        </div>
+                        <div class="video_watch d-flex align-items-center">
+                            <div class="play_btn wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
+                                <a href="https://www.youtube.com/watch?v=D7tF-cY2M9o" class="video_icon popup-video"> <i class="fa fa-play"></i> </a>
+                            </div>
+                           <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s"> Watch Video</span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- portfolio_image_area  -->
     <div class="portfolio_image_area">
         <div class="container">
@@ -256,28 +255,6 @@
         </div>
     </div>
     <!--/ portfolio_image_area  -->
-
-    <div class="how_we_work_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-5">
-                    <div class="work_info">
-                        <div class="section_title">
-                            <h3 class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".3s">How we work</h3>
-                            <p class="mid_text wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".4s">“Function information without cross action media value.</p>
-                            <p class="last_p wow fadeInRight" data-wow-duration="1s" data-wow-delay=".5s">Efficiently unleash cross-media tour function information without cross action media value. Quickly maximize timely deliverables for real-time schemas.</p>
-                        </div>
-                        <div class="video_watch d-flex align-items-center">
-                            <div class="play_btn wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
-                                <a href="https://www.youtube.com/watch?v=D7tF-cY2M9o" class="video_icon popup-video"> <i class="fa fa-play"></i> </a>
-                            </div>
-                           <span class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".7s"> Watch Video</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- team_member_start -->
     <div class="team_area ">
