--- a/features.html
+++ b/features.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Kode</title>
+    <title>AppLab</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,8 +40,8 @@
                     <div class="row align-items-center">
                         <div class="col-xl-3 col-lg-2">
                             <div class="logo">
-                                <a href="https://kodelang.dev">
-                                    <img src="images/kode.png" width="40" height="40" alt="">
+                                <a href="index.html">
+                                    <img src="img/logo.png" alt="">
                                 </a>
                             </div>
                         </div>
@@ -49,29 +49,32 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="https://kodelang.dev">Trang chủ</a></li>
-                                        <li><a href="https://kodelang.dev/product">Sản phẩm</a></li>
-                                        <li><a href="#">Tài liệu <i class="ti-angle-down"></i></a>
+                                        <li><a class="active" href="index.html">home</a></li>
+                                        <li><a href="features.html">Features</a></li>
+                                        <li><a href="Pricing.html">Pricing</a></li>
+                                        <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
-                                                <li><a href="https://kodelang.dev/docs/categories/KodePas/">KodePas</a></li>
-                                                <li><a href="https://kodelang.dev/docs/categories/KodeLang/">Kode Lang</a></li>
-                                                <li><a href="https://kodelang.dev/docs/categories/KodeStudio/">Kode Studio</a></li>
+                                                <li><a href="blog.html">blog</a></li>
+                                                <li><a href="single-blog.html">single-blog</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="https://kodelang.dev/community">Cộng đồng</a></li>
-                                        <li><a href="https://kodelang.dev/donate">Tài trợ</a></li>
+                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <ul class="submenu">
+                                                 <li><a href="elements.html">elements</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
                         </div>
-                        <!--<div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                        <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                             <div class="Appointment">
                                 <div class="book_btn d-none d-lg-block">
                                     <a  href="#">Download</a>
                                 </div>
                             </div>
                         </div>
-                    -->
                         <div class="col-12">
                             <div class="mobile_menu d-block d-lg-none"></div>
                         </div>
@@ -83,108 +86,19 @@
     </header>
     <!-- header-end -->
 
-    <!-- slider_area_start -->
-    <div class="slider_area">
-        <div class="single_slider  d-flex align-items-center slider_bg_1">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-xl-7 col-md-6">
-                        <div class="slider_text ">
-                            <h3 class="wow fadeInDown" data-wow-duration="1s" data-wow-delay=".1s" >Kode <br>
-                            </h3>
-                            <p class="wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">Do lập trình viên, vì lập trình viên</p>
-                            <div class="video_service_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".1s">
-                                <a href="https://kodelang.dev/pro" class="boxed-btn3">Khám phá sản phẩm của chúng tôi</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-5 col-md-6">
-                        <div class="phone_thumb wow fadeInDown" data-wow-duration="1.1s" data-wow-delay=".2s">
-                            <img src="img/ilstrator/phone.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- slider_area_end -->
-    <!-- service_area  -->
-    <div class="service_area">
+    <!-- bradcam_area  -->
+    <div class="bradcam_area bradcam_bg_1">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
-                    <div class="section_title text-center  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <h3>Kode với các dịch vụ <br>
-                                cho lập trình viên</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-4">
-                    <div class="single_service text-center wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
-                        <div class="thumb">
-                                <img src="img/icon/2.svg" alt="">
-                        </div>
-                        <h3>Manage team in <br>
-                                One Place</h3>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                        <div class="single_service text-center wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
-                                <div class="thumb">
-                                        <img src="img/icon/1.svg" alt="">
-                                </div>
-                                <h3>All-powerful Pointing <br> 
-                                        has no control</h3>
-                            </div>
-                </div>
-                <div class="col-lg-4 col-md-4">
-
-                            <div class="single_service text-center wow fadeInUp " data-wow-duration=".8s" data-wow-delay=".6s">
-                                <div class="thumb">
-                                        <img src="img/icon/3.svg" alt="">
-                                </div>
-                                <h3>Establish a solid online
-                                        presence</h3>
-                            </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--/ service_area  -->
-
-    <!-- service_area_2  -->
-    <div class="service_area_2">
-        <div class="container">
-            <div class="service_content_wrap">
-                <div class="row">
-                    <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                            <span>01</span>
-                            <h3>Sign Up for free</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4">
-                        <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
-                            <span>02</span>
-                            <h3>Make your profile</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
-                        <div class="single_service">
-                            <span>03</span>
-                            <h3>Enjoy the app</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
-                        </div>
+                    <div class="bradcam_text">
+                        <h3>App Features</h3>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--/ service_area_2  -->
-
+    <!-- /bradcam_area  -->
 
     <!-- about  -->
     <div class="features_area ">
@@ -238,170 +152,50 @@
         </div>
     </div>
     <!--/ about  -->
-    <!-- testmonial_area  -->
-    <div class="testmonial_area">
-        <div class="container">
-            <div class="col-xl-12">
-                <div class="testmonial_active owl-carousel">
-                    <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <div class="section_title">
-                            <h3>Review from our <br>
-                                    regular users</h3>
-                        </div>
-                        <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod <br>
-                                tempor incididunt labore et dolore magna aliqua <br>
-                                quis ipsum suspendisse ultrices.
-                        </p>
-                        <div class="rating_author">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <span>
-                                    - Robert Smile
-                            </span>
-                        </div>
-                    </div>
-                    <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <div class="section_title">
-                            <h3>Review from our <br>
-                                    regular users</h3>
-                        </div>
-                        <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod <br>
-                                tempor incididunt labore et dolore magna aliqua <br>
-                                quis ipsum suspendisse ultrices.
-                        </p>
-                        <div class="rating_author">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <span>
-                                    - Robert Smile
-                            </span>
-                        </div>
-                    </div>
-                    <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <div class="section_title">
-                            <h3>Review from our <br>
-                                    regular users</h3>
-                        </div>
-                        <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod <br>
-                                tempor incididunt labore et dolore magna aliqua <br>
-                                quis ipsum suspendisse ultrices.
-                        </p>
-                        <div class="rating_author">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <span>
-                                    - Robert Smile
-                            </span>
-                        </div>
-                    </div>
-                    <div class="single_testmonial text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
-                        <div class="section_title">
-                            <h3>Review from our <br>
-                                    regular users</h3>
-                        </div>
-                        <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod <br>
-                                tempor incididunt labore et dolore magna aliqua <br>
-                                quis ipsum suspendisse ultrices.
-                        </p>
-                        <div class="rating_author">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <span>
-                                    - Robert Smile
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--/ testmonial_area  -->
 
-    <!-- prising_area  -->
-    <div class="prising_area">
+    <!-- service_area_2  -->
+    <div class="service_area_2 plus_margin">
         <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title text-center wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".5s">
-                        <h3>Unlock full Power</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit sed do eiusmod <br> tempor incididunt.</p>
+            <div class="row align-items-center">
+                <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".5s">
+                    <div class="man_thumb">
+                        <img src="img/ilstrator_img/man_walk.png" alt="">
+                    </div>
+                </div>
+                <div class="col-xl-5 offset-xl-1 col-lg-6 col-md-6 ">
+                    <div class="mobile_screen wow fadeInRight" data-wow-duration=".8s" data-wow-delay=".5s">
+                        <img src="img/ilstrator_img/mobile_screen.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="row no-gutters align-items-center">
-                <div class="col-xl-4 col-md-4">
-                    <div class="single_prising text-center wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".8s">
-                        <div class="prising_header d-flex justify-content-between">
-                            <h3>Basic</h3>
-                            <span>$06</span>
-                        </div>
-                        <ul>
-                            <li>One User</li>
-                            <li>1000 ui elements</li>
-                            <li>Webmail Support</li>
-                            <li>100GB Cloud Storage</li>
-                        </ul>
-                        <div class="prising_bottom">
-                            <a href="#" class="get_now prising_btn">Get Now</a>
+            <div class="service_content_wrap">
+                <div class="row">
+                    <div class="col-lg-4 col-md-4">
+                        <div class="single_service  wow fadeInUp" data-wow-duration=".5s" data-wow-delay=".3s">
+                            <span>01</span>
+                            <h3>Sign Up for free</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single_prising text-center wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".6s">
-                        <div class="prising_header d-flex justify-content-between pink_header">
-                            <h3>Team</h3>
-                            <span>$06</span>
-                        </div>
-                        <ul>
-                            <li>One User</li>
-                            <li>1000 ui elements</li>
-                            <li>Webmail Support</li>
-                            <li>100GB Cloud Storage</li>
-                            <li>Unlimited Users Limit</li>
-                        </ul>
-                        <div class="prising_bottom">
-                            <a href="#" class="get_now prising_btn">Get Now</a>
+                    <div class="col-lg-4 col-md-4">
+                        <div class="single_service  wow fadeInUp" data-wow-duration=".6s" data-wow-delay=".4s">
+                            <span>02</span>
+                            <h3>Make your profile</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-xl-4 col-md-4">
-                    <div class="single_prising text-center wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".8s">
-                        <div class="prising_header d-flex justify-content-between green_header">
-                            <h3>Business</h3>
-                            <span>$06</span>
-                        </div>
-                        <ul>
-                            <li>One User</li>
-                            <li>1000 ui elements</li>
-                            <li>Webmail Support</li>
-                            <li>100GB Cloud Storage</li>
-                        </ul>
-                        <div class="prising_bottom">
-                            <a href="#" class="get_now prising_btn">Get Now</a>
+                    <div class="col-lg-4 col-md-4  wow fadeInUp" data-wow-duration=".7s" data-wow-delay=".5s">
+                        <div class="single_service">
+                            <span>03</span>
+                            <h3>Enjoy the app</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit sed do eiusmod tempor.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--/ prising_area  -->
+    <!--/ service_area_2  -->
 
     <!-- productivity_area  -->
     <div class="productivity_area">
