--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Kode - new platform</title>
+    <title>KodePage</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -281,20 +281,6 @@
                         <h3 class="name">Nguyễn Đoan Trường</h3>
                         <p class="title">editor</p>
                         <div class="text-center social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 invisible item">
-                    <div class="box"><img class="rounded-circle" src="assets/img/namrc.jpg">
-                        <h3 class="name">Nam RC</h3>
-                        <p class="title">designer</p>
-                        <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
-                    </div>
-                </div>
-                <div class="col-md-6 col-lg-4 invisible item">
-                    <div class="box"><img class="rounded-circle" src="assets/img/neonguyen.jpg">
-                        <h3 class="name">Nguyễn Quang Anh</h3>
-                        <p class="title">maketing</p>
-                        <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                     </div>
                 </div>
             </div>
