--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>KodePage</title>
+    <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
+    <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -14,6 +19,7 @@
     <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
     <link rel="stylesheet" href="assets/css/Features-Boxed.css">
     <link rel="stylesheet" href="assets/css/Footer-Clean.css">
+    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
@@ -31,11 +37,11 @@
                 <ul class="nav navbar-nav mr-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Home</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#">Platform</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Docs</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Community</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Contact</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Donate</a></li>
-                </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="#">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="#">Get Started</a></span></div>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
+                </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
     </nav>
     <div class="text-center">
@@ -160,7 +166,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/getter.png"></a></div>
                         <div class="col">
                             <h3 class="name">Kode Getter</h3>
-                            <p class="description">Can switch between the C language library to KodeLang. This increases the Kode power up.&nbsp;&nbsp;<br></p>
+                            <p class="description">Help Kode interact with the Server, download and install packages, display package information and lists from channels.<br></p>
                         </div>
                     </div>
                 </div>
@@ -286,17 +292,17 @@
             </div>
         </div>
     </div>
-    <div>
+    <div></div>
+    <div class="btn-group" role="group"></div>
+    <div class="highlight-blue">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12" style="margin-bottom: 30px;">
-                    <h2 class="text-center">Install Kode today!</h2>
-                </div>
+            <div class="intro">
+                <h2 class="text-center">Install Kode today</h2>
+                <p class="text-center">Free and open source to day, forever</p>
             </div>
+            <div class="buttons"><a class="btn btn-primary" role="button" href="#">Getting started</a><a class="btn btn-primary" role="button" href="#">github repo</a></div>
         </div>
     </div>
-    <h4 class="text-center" style="margin-bottom: 31px;">It free and open source</h4>
-    <div class="btn-group" role="group"><button class="btn btn-primary" type="button">Getting Started</button><button class="btn btn-primary" type="button" style="margin-right: 0;margin-left: 30px;">GitHub Repo</button></div>
     <div class="footer-clean">
         <footer>
             <div class="container">
