--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 
 <body class="text-center" style="color: rgb(46,72,98);">
     <nav class="navbar navbar-light navbar-expand-md sticky-top bounce animated navigation-clean-button">
-        <div class="container"><a class="navbar-brand" href="#">Kode</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand" href="https://kodelang.dev">Kode</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#">Home</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="#">Platform</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="https://kodelang.dev">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/platform.html">Platform</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
@@ -47,20 +47,74 @@
     <div class="text-center">
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 text-left">
                     <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
-                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform<br>for building powerful applications.<br></p>
-                    <p class="text-left" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;"></p>
-                    <div class="btn-toolbar">
-                        <div class="btn-group" role="group"><button class="btn btn-primary" data-bs-hover-animate="bounce" type="button">Getting Started</button><button class="btn btn-primary" data-bs-hover-animate="bounce" type="button" style="margin-right: 0px;margin-left: 11px;">GitHub</button>
-                            <button
-                                class="btn btn-primary" data-bs-hover-animate="bounce" type="button" style="margin-left: 12px;">Donate</button>
-                        </div>
-                        <div class="btn-group" role="group"></div>
-                    </div>
-                </div>
+                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform<br>for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
+                    <a
+                        class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
                 <div class="col-md-6">
                     <picture><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/app.png"></picture>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="margin-top: 50px;margin-bottom: 50px;">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="text-center" style="padding-top: 25px;padding-bottom: 25px;">Kode good for</h1>
+                </div>
+            </div>
+            <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/native.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Native Development</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/web.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Web Development</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/hibrid.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Hibrid Development</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/server.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Server Backend</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;margin-top: 0px;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/iot.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Internet of Thing</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;margin-top: 0px;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/ai.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Artificial Intelligence</h4>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -205,7 +259,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">KodePas</h4>
-                            <h6 class="text-muted card-subtitle mb-2">The SDK for Kode</h6><button class="btn btn-primary active btn-sm text-center" type="button" style="background-color: #4396ee;color: rgb(255,255,255);filter: blur(0px) brightness(100%) contrast(100%) grayscale(0%) hue-rotate(0deg);">See more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">The SDK for Kode</h6><button class="btn btn-primary active btn-sm text-center actions" type="button" style="background-color: #4396ee;color: rgb(255,255,255);filter: blur(0px) brightness(100%) contrast(100%) grayscale(0%) hue-rotate(0deg);font-size: 19px;">See more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;color: rgb(214,217,221);">
@@ -225,7 +279,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center" style="margin-top: 14px;">
+            <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center" style="margin-top: 0px;">
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
@@ -300,7 +354,7 @@
                 <h2 class="text-center">Install Kode today</h2>
                 <p class="text-center">Free and open source to day, forever</p>
             </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="#">Getting started</a><a class="btn btn-primary" role="button" href="#">github repo</a></div>
+            <div class="buttons"><a class="btn btn-primary" role="button" href="https://kodelang.dev/get-started.html">Getting started</a><a class="btn btn-primary" role="button" href="https://www.github.com/kodestudio">github repo</a></div>
         </div>
     </div>
     <div class="footer-clean">
@@ -310,29 +364,31 @@
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Tools</h3>
                         <ul>
-                            <li><a href="#">Kode Studio</a></li>
-                            <li><a href="#">Kode CLI</a></li>
-                            <li><a href="#">KodePas</a></li>
+                            <li><a href="https://kodelang.dev/kodestudio.html">Kode Studio</a></li>
+                            <li><a href="https://kodelang.dev/cli">Kode CLI</a></li>
+                            <li><a href="https://kodelang.dev/kodepas.html">KodePas</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>Resource</h3>
                         <ul>
-                            <li><a href="#">Document</a></li>
-                            <li><a href="#">Community</a></li>
-                            <li><a href="#">Donate</a></li>
+                            <li><a href="https://kodelang.dev/docs.html">Document</a></li>
+                            <li><a href="https://kodelang.dev/community.html">Community</a></li>
+                            <li><a href="https://kodelang.dev/donate.html">Donate</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
                         <h3>More</h3>
                         <ul>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Jobs</a></li>
-                            <li><a href="#">Terms</a></li>
+                            <li><a href="https://kodelang.dev/contact.html">Contact</a></li>
+                            <li><a href="https://kodelang.dev/jobs.html">Jobs</a></li>
+                            <li><a href="https://kodelang.dev/terms.html">Terms</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-youtube"></i></a><a href="#"><i class="icon ion-social-github"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-                        <p class="copyright">Kode © 2020</p>
+                    <div class="col-lg-3 item social"><a href="https://www.facebook.com/kode.page"><i class="icon ion-social-facebook"></i></a><a href="https://www.youtube.com/channel/UCNE3g4pFx40HJrnBoHzgJ8A"><i class="icon ion-social-youtube"></i></a><a href="https://www.github.com/kodestudio"><i class="icon ion-social-github"></i></a>
+                        <a
+                            href="https://www.instagram.com/kode.page"><i class="icon ion-social-instagram"></i></a>
+                            <p class="copyright">Kode © 2020</p>
                     </div>
                 </div>
             </div>
