--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/hibrid.png"></div>
                         <div class="card-body text-center">
-                            <h4 class="card-title">Hibrid Development</h4>
+                            <h4 class="card-title">Hybrid Development</h4>
                         </div>
                     </div>
                 </div>
