thêm giấy phép (trang trống)

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
-                </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
+                </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
     </nav>
     <div class="text-center">
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-md-6 text-left">
                     <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
-                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform from FPC and LCL project <br>for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
+                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
                     <a
                         class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
                 <div class="col-md-6">
@@ -86,7 +86,7 @@
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/hibrid.png"></div>
                         <div class="card-body text-center">
-                            <h4 class="card-title">Hybrid Development</h4>
+                            <h4 class="card-title">Hibrid Development</h4>
                         </div>
                     </div>
                 </div>
@@ -202,7 +202,7 @@
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/lang.png"></a></div>
                         <div class="col">
                             <h3 class="name">Other language</h3>
-                            <p class="description">Kode is not only compatible with JS, but also compatible with most platforms for JS. If you are from JS then you will enjoy this.<br></p>
+                            <p class="description">Kode can combine many other languages. This increases the power and diversity.<br></p>
                         </div>
                     </div>
                 </div>
@@ -352,7 +352,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Install Kode today</h2>
-                <p class="text-center">Free and open source today, forever</p>
+                <p class="text-center">Free and open source to day, forever</p>
             </div>
             <div class="buttons"><a class="btn btn-primary" role="button" href="https://kodelang.dev/get-started.html">Getting started</a><a class="btn btn-primary" role="button" href="https://www.github.com/kodestudio">github repo</a></div>
         </div>
