thêm danh sách open source đã dùng

--- a/license.html
+++ b/license.html
@@ -58,6 +58,67 @@
             </div>
         </div>
     </div>
+    <div style="margin-top: 50px;margin-bottom: 50px;">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="text-center" style="padding-top: 25px;padding-bottom: 25px;">The open project is used by Kode</h1>
+                </div>
+            </div>
+            <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/lazarus.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">FPC, Lazarus and more</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/gnu.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">GNU Tools</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/cordova.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Cordova</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/git.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">Git</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;margin-top: 0px;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/vs%20code.png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">VS Code (Plugin for Kode)</h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;margin-top: 0px;">
+                    <div class="card border rounded shadow">
+                        <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/more%20(1).png"></div>
+                        <div class="card-body text-center">
+                            <h4 class="card-title">And more project</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
