--- a/license.html
+++ b/license.html
@@ -120,7 +120,7 @@
         </div>
     </div>
     <h1 class="text-center">GPL 3.0</h1>
-    <h6 class="text-left">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; GNU GENERAL PUBLIC LICENSE<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Version 3, 29 June 2007<br><br><br><br> Copyright (C) 2007 Free Software Foundation, Inc. <br><br> Everyone is
+    <h6 class="text-center">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; GNU GENERAL PUBLIC LICENSE<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Version 3, 29 June 2007<br><br><br><br> Copyright (C) 2007 Free Software Foundation, Inc. <br><br> Everyone is
         permitted to copy and distribute verbatim copies<br><br> of this license document, but changing it is not allowed.<br><br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preamble<br><br><br><br>&nbsp;The
         GNU General Public License is a free, copyleft license for<br><br>software and other kinds of works.<br><br><br><br>&nbsp;The licenses for most software and other practical works are designed<br><br>to take away your freedom to share and change
         the works.&nbsp;By contrast,<br><br>the GNU General Public License is intended to guarantee your freedom to<br><br>share and change all versions of a program--to make sure it remains free<br><br>software for all its users.&nbsp;We, the Free Software
